created omdb api using axios for movie search and it's working, also created package.json and gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,22 @@
 
 
 
+##############
+#node modules#
+##############
+
+node_modules/
+
+##########
+#DS STORE#
+##########
+.DS_Store
 
 
+########
+#dotenv#
+########
+.env
 
 
 
