--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/platzmanfan/node_liri/issues"
   },
-  "homepage": "https://github.com/platzmanfan/node_liri#readme"
+  "homepage": "https://github.com/platzmanfan/node_liri#readme",
+  "dependencies": {
+    "axios": "^0.19.2",
+    "dotenv": "^8.2.0"
+  }
 }
